[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"
authors = [ "hardfault <hardfau18@gmail.com>"]
description = "Simple tui chat application for local network."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
crossterm = "0.27.0"
notify-rust = "4.9.0"
ratatui = "0.22.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
